[package]
name = "rust-os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"
volatile = "0.2"
spin = "0.9.3"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
x86_64 = "0.14"
uart_16550 = "0.2"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33

# [profile.dev]
# panic = "abort"

# [profile.release]
# panic = "abort"

